# C-project

./: CMakeLists.txt  Encodage.c  Existe.c  LICENSE  README.md  app.py  main.c  short.db  test.c  verified_encode.txt
.github/workflows/: automatedTestForTheMain.yml
static/css/: style.css
templates/: index.html  package.json
tests/: test.c
